--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
  font-family: "Press Start 2P", sans-serif; /* use a modular font */
  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
  backdrop-filter: blur(10px); /* blur the background */
+ cursor: pointer;
 }
 
 
