skidee coming soon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
  }
 
  body {
- background-image: url('ambience.gif');
+ /* background-image: url('https://files.catbox.moe/dfnp3j.webm'); */
+ background-color: black;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
